--- a/Eshopper/checkout.html
+++ b/Eshopper/checkout.html
@@ -102,43 +102,43 @@
 				</ol>
 			</div><!--/breadcrums-->
 
-			<div class="step-one">
-				<h2 class="heading">Step1</h2>
-			</div>
-			<div class="checkout-options">
-				<h3>New User</h3>
-				<p>Checkout options</p>
-				<ul class="nav">
-					<li>
-						<label><input type="checkbox"> Register Account</label>
-					</li>
-					<li>
-						<label><input type="checkbox"> Guest Checkout</label>
-					</li>
-					<li>
-						<a href=""><i class="fa fa-times"></i>Cancel</a>
-					</li>
-				</ul>
-			</div><!--/checkout-options-->
+<!--			<div class="step-one">-->
+<!--				<h2 class="heading">Step1</h2>-->
+<!--			</div>-->
+<!--			<div class="checkout-options">-->
+<!--				<h3>New User</h3>-->
+<!--				<p>Checkout options</p>-->
+<!--				<ul class="nav">-->
+<!--					<li>-->
+<!--						<label><input type="checkbox"> Register Account</label>-->
+<!--					</li>-->
+<!--					<li>-->
+<!--						<label><input type="checkbox"> Guest Checkout</label>-->
+<!--					</li>-->
+<!--					<li>-->
+<!--						<a href=""><i class="fa fa-times"></i>Cancel</a>-->
+<!--					</li>-->
+<!--				</ul>-->
+<!--			</div>&lt;!&ndash;/checkout-options&ndash;&gt;-->
 
-			<div class="register-req">
-				<p>Please use Register And Checkout to easily get access to your order history, or use Checkout as Guest</p>
-			</div><!--/register-req-->
+<!--			<div class="register-req">-->
+<!--				<p>Please use Register And Checkout to easily get access to your order history, or use Checkout as Guest</p>-->
+<!--			</div>&lt;!&ndash;/register-req&ndash;&gt;-->
 
 			<div class="shopper-informations">
 				<div class="row">
-					<div class="col-sm-3">
-						<div class="shopper-info">
-							<p>Shopper Information</p>
-							<form>
-								<input type="text" placeholder="Display Name">
-								<input type="text" placeholder="User Name">
-								<input type="password" placeholder="Password">
-								<input type="password" placeholder="Confirm password">
-							</form>
-							<a class="btn btn-primary" href="">Get Quotes</a>
-							<a class="btn btn-primary" href="">Continue</a>
-						</div>
+					<div class="col-sm-2">
+<!--						<div class="shopper-info">-->
+<!--							<p>Shopper Information</p>-->
+<!--							<form>-->
+<!--								<input type="text" placeholder="Display Name">-->
+<!--								<input type="text" placeholder="User Name">-->
+<!--								<input type="password" placeholder="Password">-->
+<!--								<input type="password" placeholder="Confirm password">-->
+<!--							</form>-->
+<!--							<a class="btn btn-primary" href="">Get Quotes</a>-->
+<!--							<a class="btn btn-primary" href="">Continue</a>-->
+<!--						</div>-->
 					</div>
 					<div class="col-sm-5 clearfix">
 						<div class="bill-to">
@@ -159,26 +159,27 @@
 								<form>
 									<input type="text" placeholder="Zip / Postal Code *">
 									<select>
-										<option>-- Country --</option>
-										<option>United States</option>
-										<option>Bangladesh</option>
-										<option>UK</option>
-										<option>India</option>
-										<option>Pakistan</option>
-										<option>Ucrane</option>
-										<option>Canada</option>
-										<option>Dubai</option>
+										<option>-- Srilanka --</option>
+<!--										<option>United States</option>-->
+<!--										<option>Bangladesh</option>-->
+<!--										<option>UK</option>-->
+<!--										<option>India</option>-->
+<!--										<option>Pakistan</option>-->
+<!--										<option>Ucrane</option>-->
+<!--										<option>Canada</option>-->
+<!--										<option>Dubai</option>-->
 									</select>
 									<select>
-										<option>-- State / Province / Region --</option>
-										<option>United States</option>
-										<option>Bangladesh</option>
-										<option>UK</option>
-										<option>India</option>
-										<option>Pakistan</option>
-										<option>Ucrane</option>
-										<option>Canada</option>
-										<option>Dubai</option>
+										<option>-- Province --</option>
+										<option>Northern</option>
+										<option>Central</option>
+										<option>Eastern</option>
+										<option>North Central</option>
+										<option>North Western</option>
+										<option>Sabaragamuwa</option>
+										<option>Southern</option>
+										<option>Uva</option>
+										<option>Western</option>
 									</select>
 									<input type="password" placeholder="Confirm password">
 									<input type="text" placeholder="Phone *">
@@ -193,8 +194,8 @@
 							<p>Shipping Order</p>
 							<textarea name="message"  placeholder="Notes about your order, Special Notes for Delivery" rows="16"></textarea>
 							<label><input type="checkbox"> Shipping to bill address</label>
-						</div>	
-					</div>					
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="review-payment">
@@ -309,6 +310,10 @@
 									<tr>
 										<td>Total</td>
 										<td><span>Rs 2560</span></td>
+									</tr>
+									<tr>
+										<td></td>
+										<td><a class="btn btn-primary" href="">Checkout</a></td>
 									</tr>
 								</table>
 							</td>
