--- a/Eshopper/index.html
+++ b/Eshopper/index.html
@@ -444,7 +444,7 @@
                                         <img class="cart-item-image" src="images/home/gallery1.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
                                 </div>
@@ -457,7 +457,7 @@
                                         <img class="cart-item-image" src="images/home/gallery2.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -471,7 +471,7 @@
                                         <img class="cart-item-image" src="images/home/gallery3.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -485,7 +485,7 @@
                                         <img src="images/home/gallery4.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -502,7 +502,7 @@
                                         <img class="cart-item-image" src="images/home/gallery4.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -516,7 +516,7 @@
                                         <img class="cart-item-image" src="images/home/gallery3.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -530,7 +530,7 @@
                                         <img class="cart-item-image" src="images/home/gallery2.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -544,7 +544,7 @@
                                         <img class="cart-item-image" src="images/home/gallery1.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -561,7 +561,7 @@
                                         <img src="images/home/gallery3.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -575,7 +575,7 @@
                                         <img class="cart-item-image" src="images/home/gallery4.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -589,7 +589,7 @@
                                         <img class="cart-item-image" src="images/home/gallery1.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -603,7 +603,7 @@
                                         <img class="cart-item-image" src="images/home/gallery2.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -620,7 +620,7 @@
                                         <img class="cart-item-image" src="images/home/gallery1.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -634,7 +634,7 @@
                                         <img class="cart-item-image" src="images/home/gallery2.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -648,7 +648,7 @@
                                         <img class="cart-item-image" src="images/home/gallery3.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -662,7 +662,7 @@
                                         <img class="cart-item-image" src="images/home/gallery4.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -679,7 +679,7 @@
                                         <img class="cart-item-image" src="images/home/gallery2.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -693,7 +693,7 @@
                                         <img class="cart-item-image" src="images/home/gallery4.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -707,7 +707,7 @@
                                         <img class="cart-item-image" src="images/home/gallery3.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
@@ -721,7 +721,7 @@
                                         <img class="cart-item-image" src="images/home/gallery1.jpg" alt=""/>
                                         <h2 class="price">Rs 560</h2>
                                         <p class="cart-item-title">Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                        <a class="btn btn-default add-to-cart"><i
                                                 class="fa fa-shopping-cart"></i>Add to cart</a>
                                     </div>
 
